--- a/front/components/Map/style.css
+++ b/front/components/Map/style.css
@@ -1,10 +1,20 @@
-.mapContainer{
+.mapContainer {
+  width: 100%;
   height: 100%;
-  width:100%;
 }
 
-.map{
+.map {
+  width: 100%;
   height: 100%;
-  width:100%;
-  background: #1e1f1f
+  background: #1e1f1f;
+}
+
+.loader {
+  position: absolute;
+  z-index: 1000;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 4rem);
+  text-align: center;
 }
