--- a/front/components/Map/PlaceIcon/style.css
+++ b/front/components/Map/PlaceIcon/style.css
@@ -1,6 +1,4 @@
 .marker {
-  width: 32px;
-  height: 32px;
   text-align: center;
   border-radius: 50%;
   background-image: radial-gradient(50% 49%, #fff 50%, #fcfcfc 100%);
@@ -9,13 +7,12 @@
 
 .icon {
   position: relative;
-  top: calc(22px / 4);
+  top: calc((36px - 32px) / 2);
   display: inline-block;
-  width: 22px;
-  height: 22px;
+  width: 32px;
+  height: 32px;
   margin: 0;
   padding: 0;
   background-image: linear-gradient(300deg, #c34ef8 0%, #5959d3 100%);
-  -webkit-mask: url(https://ss0.4sqi.net/img/categories_v2/building/medical_dentist_44.png);
   -webkit-mask-size: contain;
 }
