--- a/front/components/Map/PlaceIcon/style.css
+++ b/front/components/Map/PlaceIcon/style.css
@@ -1,20 +1,16 @@
 .marker {
-  text-align: center;
+  display: flex;
   border-radius: 50%;
   background-image: radial-gradient(50% 49%, #fff 50%, #fcfcfc 100%);
   box-shadow: 0 0 18px 6px rgba(0, 0, 0, .50);
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
-  position: relative;
-  top: calc((36px - 32px) / 2);
-  display: inline-block;
   width: 32px;
   height: 32px;
-  margin: 0;
-  padding: 0;
   background-image: linear-gradient(300deg, #c34ef8 0%, #5959d3 100%);
-  -webkit-mask-size: contain;
 }
 
 :global(.leaflet-popup-content-wrapper), .popup{
