--- a/front/components/Map/PlaceIcon/style.css
+++ b/front/components/Map/PlaceIcon/style.css
@@ -1,7 +1,7 @@
 .marker {
   display: flex;
   border-radius: 50%;
-  background-image: radial-gradient(50% 49%, #fff 50%, #fcfcfc 100%);
+  background: radial-gradient(50% 49%, #fff 50%, #fcfcfc 100%);
   box-shadow: 0 0 18px 6px rgba(0, 0, 0, .50);
   justify-content: center;
   align-items: center;
@@ -10,9 +10,9 @@
 .icon {
   width: 32px;
   height: 32px;
-  background-image: linear-gradient(300deg, #c34ef8 0%, #5959d3 100%);
+  background: linear-gradient(300deg, #c34ef8 0%, #5959d3 100%);
 }
 
-:global(.leaflet-popup-content-wrapper), .popup{
+:global(.leaflet-popup-content-wrapper), .popup {
   text-align: center;
 }
