--- a/front/components/Login/style.css
+++ b/front/components/Login/style.css
@@ -17,6 +17,7 @@
     height: 2.5rem;
     text-align: center;
     border: none;
+    border-radius: 0;
             appearance: none;
     -webkit-appearance: none;
     -webkit-font-smoothing: subpixel-antialiased;
