--- a/front/components/Login/style.css
+++ b/front/components/Login/style.css
@@ -44,6 +44,7 @@
     transition: all .1s ease-in;
     color: #525252;
     background: #ececec;
+    cursor: pointer;
 }
 
 .login input[type='submit']:hover {
