--- a/front/components/UpdateButton/style.css
+++ b/front/components/UpdateButton/style.css
@@ -4,8 +4,8 @@
     padding: 0.5rem 2rem;
     background: #FF3A8D;
     position: relative;
-    right: .5rem;
-    top: .5rem;
+    right: 0.5rem;
+    top: 0.5rem;
     float: right;
 }
 
