--- a/front/components/Navbar/style.css
+++ b/front/components/Navbar/style.css
@@ -1,6 +1,6 @@
 .navbar {
   position: absolute;
-  z-index: 10000;
+  z-index: 1000;
   top: 0;
   left: 0;
   display: block;
@@ -9,13 +9,41 @@
   color: #fff;
   background: rgba(30, 31, 31, .4);
   text-align: center;
+  transition: top 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+.navbar.mapMode {
+  top: -4rem;
 }
 
 .logo {
-  position: relative;
+  position: absolute;
   top: .5rem;
   left: .5rem;
   float: left;
   width: 3rem;
   height: 3rem;
+  transition: top 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+.navbar.mapMode .logo {
+  top: 4.5rem;
+}
+
+.handle {
+  display: block;
+  width: 100%;
+  height: 3rem;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  position: absolute;
+}
+
+.handle:hover ~ .navbar.mapMode, .navbar.mapMode:hover {
+    top:0;
+}
+
+.handle:hover ~ .navbar.mapMode .logo, .navbar.mapMode:hover .logo {
+    top: 0.5rem
 }
