--- a/front/components/Map/style.css
+++ b/front/components/Map/style.css
@@ -3,6 +3,17 @@
   height: 100%;
 }
 
+.mapHolder{
+  width: 100%;
+  height: 100%;
+  float: left;
+  transition: width 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+.featureInfoIsOpen{
+  width: calc(100% - 25rem)
+}
+
 .map {
   width: 100%;
   height: 100%;
