--- a/front/components/FeatureInfo/style.css
+++ b/front/components/FeatureInfo/style.css
@@ -1,2 +1,15 @@
-.featureInfo{}
-.hidden{}
+.featureInfo{
+  display: block;
+  height: 100%;
+  width: 25rem;
+  float: right;
+  background: #fff;
+  overflow: hidden;
+  overflow-y: auto;
+  box-sizing: border-box;
+  border-left: #ececec solid 2px;
+  transition: width 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+.hidden{
+  width: 0;
+}
