--- a/front/components/MapNav/style.css
+++ b/front/components/MapNav/style.css
@@ -4,7 +4,7 @@
   bottom: 0;
   left: 0;
   display: block;
-  width: 100%;
+  width: inherit;
   height: 4rem;
   color: #fff;
   background: rgba(30, 31, 31, .4);
