--- a/front/components/FeatureInfo/style.css
+++ b/front/components/FeatureInfo/style.css
@@ -6,7 +6,7 @@
   overflow: hidden;
   overflow-y: auto;
   box-sizing: border-box;
-  border-left: #ececec solid 2px;
+  border-left: #333 solid 2px;
   transition: width 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 .hidden{
