--- a/front/components/FeatureInfo/style.css
+++ b/front/components/FeatureInfo/style.css
@@ -12,3 +12,14 @@
 .hidden{
   width: 0;
 }
+.header{
+  width: 100%;
+  height: 20rem;
+  background: linear-gradient(300deg,#60cbfc,#38f);
+  text-align: center;
+  color: #fff;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
