--- a/front/components/FeatureInfo/style.css
+++ b/front/components/FeatureInfo/style.css
@@ -34,6 +34,7 @@
     transition: top 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
     cursor: pointer;
     z-index: 50;
+    user-select: none;
 }
 .header:hover .close{
     top: 3rem;
