--- a/front/components/FeatureInfo/style.css
+++ b/front/components/FeatureInfo/style.css
@@ -4,7 +4,6 @@
   float: right;
   background: #fff;
   overflow: hidden;
-  overflow-y: auto;
   box-sizing: border-box;
   border-left: #333 solid 2px;
   transition: width 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
@@ -45,6 +44,7 @@
     align-items: center;
     justify-content: center;
     height: 17rem;
+    overflow-y: auto;
 }
 .title > span {
     position: relative;
@@ -62,6 +62,12 @@
 }
 .latlng:hover{
   font-weight: bold;
+}
+.main{
+    display: block;
+    overflow: hidden;
+    overflow-y: auto;
+    height: calc(100% - 20rem);
 }
 .field {
     display: block;
