--- a/front/components/FeatureInfo/style.css
+++ b/front/components/FeatureInfo/style.css
@@ -104,6 +104,20 @@
     border-bottom: #bbb solid 1px;
     border-top: #bbb solid 1px;
 }
+.group > label {
+    font-size: 1rem;
+    width: 100%;
+    display: block;
+    position: relative;
+    top: -1.15rem;
+    color: #676767;
+    margin-bottom: -2rem;
+    height: 2rem;
+    line-height: 2rem;
+    user-select: none;
+    text-align: center;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff, -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff, 2px 2px 0 #fff, -3px -3px 0 #fff, 3px -3px 0 #fff, -3px 3px 0 #fff, 3px 3px 0 #fff;
+}
 .group .field{
   border-bottom: none;
 }
