--- a/front/components/App/style.css
+++ b/front/components/App/style.css
@@ -20,3 +20,16 @@
   height: calc(100% - 4rem);
   background: #fff;
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background:#fff;
+}
