--- a/front/components/Map/LocationIcon/style.css
+++ b/front/components/Map/LocationIcon/style.css
@@ -24,3 +24,38 @@
 .selected .icon{
   background: #fff;
 }
+
+.photo {
+    display: block;
+    width: 1.25rem;
+    background-size: contain;
+    border: #fff solid 2px;
+    height: 1.25rem;
+    border-radius: 50%;
+    line-height: 1.25rem;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: 0 0 6px 1px rgba(0, 0, 0, .50);
+    z-index: 2;
+}
+
+.top{
+  position: absolute;
+  top: -0.6rem;
+}
+
+.right{
+  position: absolute;
+  right: -0.6rem;
+}
+
+.bottom{
+  position: absolute;
+  bottom: -0.6rem;
+}
+
+.left{
+  position: absolute;
+  left: -0.6rem;
+}
