--- a/front/components/Loader/style.css
+++ b/front/components/Loader/style.css
@@ -39,6 +39,6 @@
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   border-radius: 15%;
-  background: #fff;
+  background: var(--globals-colors-white-0);
   animation-fill-mode: both;
 }
