--- a/front/components/LogInOut/style.css
+++ b/front/components/LogInOut/style.css
@@ -14,5 +14,5 @@
 
 .login:hover .punc, .logout:hover .punc {
   transition: color .2s ease-out;
-  color: #5dedcb;
+  color: var(--globals-colors-green);
 }
