--- a/front/components/Map/LocationIcon/style.css
+++ b/front/components/Map/LocationIcon/style.css
@@ -1,7 +1,7 @@
 .marker {
   display: flex;
   border-radius: 50%;
-  background: radial-gradient(50% 49%, #fff 50%, #fcfcfc 100%);
+  background: radial-gradient(50% 49%, var(--globals-colors-white-0) 50%, var(--globals-colors-white-1) 100%);
   box-shadow: 0 0 18px 6px rgba(0, 0, 0, .50);
   justify-content: center;
   align-items: center;
@@ -10,31 +10,31 @@
 .icon {
   width: 32px;
   height: 32px;
-  background: linear-gradient(300deg, #c34ef8 0%, #5959d3 100%);
+  background: linear-gradient(300deg, var(--globals-colors-purple) 0%, var(--globals-colors-purple-dark) 100%);
   -webkit-mask-size: 32px;
 -webkit-mask-repeat: no-repeat;
 -webkit-mask-position: center;
 }
 
 .selected{
-    background: linear-gradient(300deg,#60cbfc,#38f);
-    border: #fff solid 2px;
+    background: linear-gradient(300deg,var(--globals-colors-blue), var(--globals-colors-blue-dark));
+    border: var(--globals-colors-white-0) solid 2px;
 }
 
 .selected .icon{
-  background: #fff;
+  background: var(--globals-colors-white-0);
 }
 
 .photo {
     display: block;
     width: 1.25rem;
     background-size: contain;
-    border: #fff solid 2px;
+    border: var(--globals-colors-white-0) solid 2px;
     height: 1.25rem;
     border-radius: 50%;
     line-height: 1.25rem;
     text-align: center;
-    color: #fff;
+    color: var(--globals-colors-white-0);
     font-weight: bold;
     box-shadow: 0 0 6px 1px rgba(0, 0, 0, .50);
     z-index: 2;
