--- a/front/components/MapNav/style.css
+++ b/front/components/MapNav/style.css
@@ -6,7 +6,7 @@
   display: block;
   width: inherit;
   height: 4rem;
-  color: #fff;
+  color: var(--globals-colors-white-0);
   background: rgba(30, 31, 31, .4);
   text-align: center;
   user-select: none;
