--- a/front/components/Navbar/style.css
+++ b/front/components/Navbar/style.css
@@ -6,7 +6,7 @@
   display: block;
   width: 100%;
   height: 4rem;
-  color: #fff;
+  color: var(--globals-colors-white-0);
   background: rgba(30, 31, 31, .4);
   text-align: center;
   transition: top 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
