--- a/front/components/RangeSelector/react-datepicker.css
+++ b/front/components/RangeSelector/react-datepicker.css
@@ -1,5 +1,5 @@
 :global(.react-datepicker__tether-element-attached-bottom .react-datepicker__triangle), :global(.react-datepicker__year-read-view--down-arrow), :global(.react-datepicker__tether-element-attached-bottom .react-datepicker__triangle::before), :global(.react-datepicker__year-read-view--down-arrow::before) {
-  border-top-color: #fff;
+  border-top-color: var(--globals-colors-white-0);
 }
 :global(.react-datepicker__tether-element-attached-bottom .react-datepicker__triangle::before), :global(.react-datepicker__year-read-view--down-arrow::before) {
   border: none
@@ -8,28 +8,28 @@
 :global(.react-datepicker) {
   font-family: Source Code Pro, monospace;
   user-select: none;
-  background: #fff;
-  color: #000;
+  background: var(--globals-colors-white-0);
+  color: var(--globals-colors-black-0);
   border: none;
   border-radius: 0;
 }
 
 :global(.react-datepicker__header) {
-  background: #ff3a8e;
+  background: var(--globals-colors-pink);
   border: none;
   border-radius: 0;
 }
 
 :global(.react-datepicker__year-read-view--selected-year) {
-    color: #fff;
+    color: var(--globals-colors-white-0);
 }
 
 :global(.react-datepicker__year-read-view:hover .react-datepicker__year-read-view--down-arrow) {
-    border-top-color: #ececec;
+    border-top-color: var(--globals-colors-white-4);
 }
 
 :global(.react-datepicker__year-dropdown) {
-    background-color: #f7f7f7;
+    background-color: var(--globals-colors-white-2);
     border-radius: 0;
     border: none;
 }
@@ -39,27 +39,27 @@
 }
 
 :global(.react-datepicker__current-month) {
-  color: #fff;
+  color: var(--globals-colors-white-0);
 }
 
 :global(.react-datepicker__navigation--previous) {
-  border-right-color: #ffffff;
+  border-right-color: var(--globals-colors-white-0)fff;
 }
 
 :global(.react-datepicker__navigation--previous:hover) {
-  border-right-color: #ececec;
+  border-right-color: var(--globals-colors-white-4);
 }
 
 :global(.react-datepicker__navigation--next) {
-  border-left-color: #fff;
+  border-left-color: var(--globals-colors-white-0);
 }
 
 :global(.react-datepicker__navigation--next:hover) {
-  border-left-color: #ececec;
+  border-left-color: var(--globals-colors-white-4);
 }
 
 :global(.react-datepicker__day-name) {
-  color: #fff;
+  color: var(--globals-colors-white-0);
 }
 
 :global(.react-datepicker__day:hover) {
@@ -68,22 +68,22 @@
 
 :global(.react-datepicker__day--highlighted) {
   border-radius: 0;
-  background: #5dedcb;
-  color: #fff;
+  background: var(--globals-colors-green);
+  color: var(--globals-colors-white-0);
 }
 
 :global(.react-datepicker__day--highlighted:hover) {
-  background: #41f1c7;
+  background: var(--globals-colors-green-hover);
 }
 
 :global(.react-datepicker__day--selected), :global(.react-datepicker__day--in-selecting-range), :global(.react-datepicker__day--in-range) {
   border-radius: 0;
-  background: #60cbfc;
-  color: #fff;
+  background: var(--globals-colors-blue);
+  color: var(--globals-colors-white-0);
 }
 
 :global(.react-datepicker__day--selected:hover), :global(.react-datepicker__day--in-selecting-range:hover), :global(.react-datepicker__day--in-range:hover) {
-  background-color: #36c0ff;
+  background-color: var(--globals-colors-blue-hover);
 }
 
 :global(.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range)) {
