--- a/front/components/App/globals.css
+++ b/front/components/App/globals.css
@@ -19,12 +19,15 @@
 
   --globals-colors-black-0: #1e1f1f;
   --globals-colors-black-1: #333;
+  --globals-colors-black-2: #444;
   --globals-colors-black-3: #525252;
+  --globals-colors-black-4: #5d5d5d;
   --globals-colors-black-5: #676767;
 
   --globals-colors-grey-0: #dadada;
   --globals-colors-grey-1: #bbb;
   --globals-colors-grey-2: #999;
+  --globals-colors-grey-3: #939393;
   --globals-colors-grey-4: #8c8c8c;
   --globals-colors-grey-5: #7b7b7b;
 
@@ -33,6 +36,7 @@
   --globals-colors-white-2: #f9f9f9;
   --globals-colors-white-3: #f2f2f2;
   --globals-colors-white-4: #ececec;
+  --globals-colors-white-5: #e2e2e2;
 
   --globals-font-family: Source Code Pro;
 }
