--- a/front/components/App/globals.css
+++ b/front/components/App/globals.css
@@ -38,5 +38,5 @@
   --globals-colors-white-4: #ececec;
   --globals-colors-white-5: #e2e2e2;
 
-  --globals-font-family: Source Code Pro;
+  --globals-font-family: "Source Code Pro", monospace;
 }
