--- a/front/components/Message/style.css
+++ b/front/components/Message/style.css
@@ -10,8 +10,8 @@
     height: 2.5rem;
     line-height: 2.5rem;
     position: absolute;
-    background: var(--globals-colors-red);
-    color: var(--globals-colors-white-0);
+    background: var(--globals-colours-red);
+    color: var(--globals-colours-white-0);
     z-index: 2;
     left: 0;
     top: -0.5rem;
@@ -27,7 +27,7 @@
 
 .indicator {
     float: right;
-    color: var(--globals-colors-red);
+    color: var(--globals-colours-red);
     position: relative;
     right: 1rem;
     opacity: 0;
