--- a/front/components/RangeSelector/react-datepicker.css
+++ b/front/components/RangeSelector/react-datepicker.css
@@ -1,5 +1,5 @@
 :global(.react-datepicker__tether-element-attached-bottom .react-datepicker__triangle), :global(.react-datepicker__year-read-view--down-arrow), :global(.react-datepicker__tether-element-attached-bottom .react-datepicker__triangle::before), :global(.react-datepicker__year-read-view--down-arrow::before) {
-  border-top-color: var(--globals-colors-white-0);
+  border-top-color: var(--globals-colours-white-0);
 }
 :global(.react-datepicker__tether-element-attached-bottom .react-datepicker__triangle::before), :global(.react-datepicker__year-read-view--down-arrow::before) {
   border: none
@@ -8,28 +8,28 @@
 :global(.react-datepicker) {
   font-family: Source Code Pro, monospace;
   user-select: none;
-  background: var(--globals-colors-white-0);
-  color: var(--globals-colors-black-0);
+  background: var(--globals-colours-white-0);
+  color: var(--globals-colours-black-0);
   border: none;
   border-radius: 0;
 }
 
 :global(.react-datepicker__header) {
-  background: var(--globals-colors-pink);
+  background: var(--globals-colours-pink);
   border: none;
   border-radius: 0;
 }
 
 :global(.react-datepicker__year-read-view--selected-year) {
-    color: var(--globals-colors-white-0);
+    color: var(--globals-colours-white-0);
 }
 
 :global(.react-datepicker__year-read-view:hover .react-datepicker__year-read-view--down-arrow) {
-    border-top-color: var(--globals-colors-white-4);
+    border-top-color: var(--globals-colours-white-4);
 }
 
 :global(.react-datepicker__year-dropdown) {
-    background-color: var(--globals-colors-white-2);
+    background-color: var(--globals-colours-white-2);
     border-radius: 0;
     border: none;
 }
@@ -39,27 +39,27 @@
 }
 
 :global(.react-datepicker__current-month) {
-  color: var(--globals-colors-white-0);
+  color: var(--globals-colours-white-0);
 }
 
 :global(.react-datepicker__navigation--previous) {
-  border-right-color: var(--globals-colors-white-0);
+  border-right-color: var(--globals-colours-white-0);
 }
 
 :global(.react-datepicker__navigation--previous:hover) {
-  border-right-color: var(--globals-colors-white-4);
+  border-right-color: var(--globals-colours-white-4);
 }
 
 :global(.react-datepicker__navigation--next) {
-  border-left-color: var(--globals-colors-white-0);
+  border-left-color: var(--globals-colours-white-0);
 }
 
 :global(.react-datepicker__navigation--next:hover) {
-  border-left-color: var(--globals-colors-white-4);
+  border-left-color: var(--globals-colours-white-4);
 }
 
 :global(.react-datepicker__day-name) {
-  color: var(--globals-colors-white-0);
+  color: var(--globals-colours-white-0);
 }
 
 :global(.react-datepicker__day:hover) {
@@ -68,25 +68,25 @@
 
 :global(.react-datepicker__day--highlighted) {
   border-radius: 0;
-  background: var(--globals-colors-green);
-  color: var(--globals-colors-white-0);
+  background: var(--globals-colours-green);
+  color: var(--globals-colours-white-0);
 }
 
 :global(.react-datepicker__day--highlighted:hover) {
-  background: var(--globals-colors-green-hover);
+  background: var(--globals-colours-green-hover);
 }
 
 :global(.react-datepicker__day--selected), :global(.react-datepicker__day--in-selecting-range), :global(.react-datepicker__day--in-range) {
   border-radius: 0;
-  background: var(--globals-colors-blue);
-  color: var(--globals-colors-white-0);
+  background: var(--globals-colours-blue);
+  color: var(--globals-colours-white-0);
 }
 
 :global(.react-datepicker__day--selected:hover), :global(.react-datepicker__day--in-selecting-range:hover), :global(.react-datepicker__day--in-range:hover) {
-  background-color: var(--globals-colors-blue-hover);
+  background-color: var(--globals-colours-blue-hover);
 }
 
 :global(.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range)) {
-  background-color: var(--globals-colors-blue);
+  background-color: var(--globals-colours-blue);
   opacity: 0.5;
 }
