--- a/front/components/UpdateButton/style.css
+++ b/front/components/UpdateButton/style.css
@@ -2,7 +2,7 @@
     line-height: 2rem;
     font-weight: 600;
     padding: 0.5rem 2rem;
-    background: var(--globals-colors-pink);
+    background: var(--globals-colours-pink);
     position: relative;
     right: 0.5rem;
     top: 0.5rem;
@@ -10,5 +10,5 @@
 }
 
 .updateButton:hover {
-    background: var(--globals-colors-pink-hover);
+    background: var(--globals-colours-pink-hover);
 }
