--- a/front/components/App/globals.css
+++ b/front/components/App/globals.css
@@ -3,6 +3,7 @@
 :root {
   --globals-colours-red: #f55;
   --globals-colours-yellow: #ffee62;
+  --globals-colours-orange: #ffc233;
 
   --globals-colours-green: #5dedcb;
   --globals-colours-green-hover: #41f1c7;
