--- a/front/components/App/globals.css
+++ b/front/components/App/globals.css
@@ -18,21 +18,21 @@
   --globals-colours-purple: #c34ef8;
   --globals-colours-purple-dark: #5959d3;
 
-  --globals-colours-black-0: #1e1f1f;
+  --globals-colours-black: #1e1f1f;
   --globals-colours-black-1: #333;
   --globals-colours-black-2: #444;
   --globals-colours-black-3: #525252;
   --globals-colours-black-4: #5d5d5d;
   --globals-colours-black-5: #676767;
 
-  --globals-colours-grey-0: #dadada;
+  --globals-colours-grey: #dadada;
   --globals-colours-grey-1: #bbb;
   --globals-colours-grey-2: #999;
   --globals-colours-grey-3: #939393;
   --globals-colours-grey-4: #8c8c8c;
   --globals-colours-grey-5: #7b7b7b;
 
-  --globals-colours-white-0: #fff;
+  --globals-colours-white: #fff;
   --globals-colours-white-1: #fbfbfb;
   --globals-colours-white-2: #f9f9f9;
   --globals-colours-white-3: #f2f2f2;
