--- a/front/components/MapNav/style.css
+++ b/front/components/MapNav/style.css
@@ -7,7 +7,7 @@
   width: inherit;
   height: 4rem;
   color: var(--globals-colours-white);
-  background: rgba(30, 31, 31, .4);
+  background: var(--globals-colours-black-trans);
   text-align: center;
   user-select: none;
 }
