--- a/front/components/App/globals.css
+++ b/front/components/App/globals.css
@@ -40,5 +40,5 @@
   --globals-colours-white-4: #ececec;
   --globals-colours-white-5: #e2e2e2;
 
-  --globals-font-family: "Source Code Pro", monospace;
+  --globals-font-family: Source Code Pro, monospace;
 }
