--- a/front/components/Navbar/style.css
+++ b/front/components/Navbar/style.css
@@ -1,15 +1,15 @@
 .navbar {
   position: absolute;
-  z-index: 1000;
   top: 0;
   left: 0;
+  z-index: 1000;
   display: block;
   width: 100%;
   height: 4rem;
   color: var(--globals-colours-white);
-  background: var(--globals-colours-black-trans);
   text-align: center;
-  transition: top 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
+  background: var(--globals-colours-black-trans);
+  transition: top .25s cubic-bezier(.65, .05, .36, 1);
 }
 
 .navbar.mapMode {
@@ -23,7 +23,7 @@
   float: left;
   width: 3rem;
   height: 3rem;
-  transition: top 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
+  transition: top .25s cubic-bezier(.65, .05, .36, 1);
 }
 
 .navbar.mapMode .logo {
@@ -31,19 +31,19 @@
 }
 
 .handle {
-  display: block;
-  width: 100%;
-  height: 3rem;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 999;
-  position: absolute;
+  display: block;
+  width: 100%;
+  height: 3rem;
 }
 
-.handle:hover ~ .navbar.mapMode, .navbar.mapMode:hover {
-    top:0;
+.handle:hover ~ .navbar.mapMode,.navbar.mapMode:hover {
+  top: 0;
 }
 
-.handle:hover ~ .navbar.mapMode .logo, .navbar.mapMode:hover .logo {
-    top: 0.5rem
+.handle:hover ~ .navbar.mapMode .logo,.navbar.mapMode:hover .logo {
+  top: .5rem;
 }
