--- a/front/components/Map/FeaturePopup/style.css
+++ b/front/components/Map/FeaturePopup/style.css
@@ -1,4 +1,5 @@
 :global(.leaflet-popup-content-wrapper), .popup {
   font-family: var(--globals-font-family);
   text-align: center;
+  border-radius: 0;
 }
